dbeaver/pro#7128 Remove deprecated API